refactor base exercise - ready for part 2